k8s/base/stage-7/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: congen
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
  - port: 8888
    targetPort: 8888
    protocol: TCP
  type: ClusterIP
